booklet word spacing fix

--- a/app/assets/stylesheets/market/booklet.styl
+++ b/app/assets/stylesheets/market/booklet.styl
@@ -1444,6 +1444,7 @@ body
 
   /* Section Partnership */
   .section-partnership
+    min-height 100%
 
     &_cnt
       padding 0
@@ -1637,6 +1638,9 @@ body
 
   /* Section Partnership */
   .section-partnership
+
+    &_text
+      margin-top 5px
 
     &_btns
       margin-top  10px
